added more choices

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-
+ <!-- turn your sound on! -->
+ 
 <div class="container">
     <h1>Hangman</h1>
     <h2>Nintendo Characters!</h2>
